--- a/style.css
+++ b/style.css
@@ -203,6 +203,13 @@ nav{
     font-weight: 800px;
     color:#FFFFFF
 }
+marquee{
+    background-color: #fea101c0;
+    padding: 30px 0px;
+    font-weight: bold;
+    font-size: 2rem;
+    color: white;
+}
 .two{
     background-image: url(./assets/bg.png),linear-gradient(#ffffffd8 , #fea10161) ; 
     background-repeat: no-repeat;
